# autotrader-scraper

./: .travis.yml  README.md  ff1.py  listmaker.py  pyproject.toml  scraper.py  script_template.py  srv.py
src/autotrader_scraper/: ad_scraper.py  advert.py  listmaker.py  scraping.py  search_results.py
