[tool.poetry]
name = "autotrader-scraper"
version = "0.1.0"
description = ""
authors = ["Musab Khawaja <khawaja@arrival.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = ">=1.4.3"
lxml = ">=3.7.3"
packaging = ">=16.8"
pycodestyle = ">=2.3.1"
pyparsing = ">=2.2.0"
requests = ">=2.20.0"
six = ">=1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
