[tool.poetry]
name = "autotrader-scraper"
version = "0.2.0"
description = ""
authors = ["Musab K <musab-k>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = ">=1.4.3"
lxml = ">=3.7.3"
packaging = ">=16.8"
pycodestyle = ">=2.3.1"
pyparsing = ">=2.2.0"
requests = ">=2.20.0"
six = ">=1.10.0"
pandas = "^1.0.3"
pyarrow = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
